--- a/text/bilayers.tex
+++ b/text/bilayers.tex
@@ -1,36 +1,131 @@
+\chapter{Bilayers etc.}
+\label{ch:bilayers}
 
-\chapter{\label{ch:2-litreview}Background}
+\begin{figure}[h]
+     \centering
+     
+     \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/mx2_bilayer_1.pdf}
+         \vspace{-1mm}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hfill
+	\begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/mx2_bilayer_2.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=0.8\textwidth]{./figures/bilayers/mx2_bilayer_3.pdf}
+         \vspace{5mm}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hfill
+     
+     \caption{xxx}
+     \label{fig:xxx}
+\end{figure}
 
-\minitoc
 
-\section{Introduction}
 
-This document introduction won't serve as a complete primer on \LaTeX.  There are plenty of those online, and googling your questions will often get you answers, especially from \url{http://tex.stackexchange.com}.
+\begin{figure}[h]
+     \centering
+     
+     \begin{subfigure}[b]{0.18\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/alg_4.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.18\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/alg_5.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.18\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/alg_6.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.18\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/alg_7.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.18\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/alg_8.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hfill
+	
+     
+     \caption{xxx}
+     \label{fig:xxx}
+\end{figure}
 
-Instead, let's talk a little about a few of the features and packages lumped into this template situation.  The \verb|savequote| environment at the beginning of chapters can add some wittiness to your thesis.  If you don't like the quotes, just remove that block.
 
-For when it comes time to do corrections, there are two useful commands here.  First, the \verb|mccorrect| command allows you to highlight a short correction \mccorrect{like this one}.  When the thesis is typeset normally, the correction will just appear as part of the text.  However, when you declare \verb|\correctionstrue| in the main \verb|Oxford_Thesis.tex| file, that correction will be highlighted in blue.  That might be useful for submitting a post-viva, corrected copy to your examiners so they can quickly verify you've completed the task.
-
-\begin{mccorrection}
-For larger chunks, like this paragraph or indeed entire figures, you can use the \verb|mccorrection| environment.  This environment highlights paragraph-sized and larger blocks with the same blue colour.
-\end{mccorrection}
-
-Read through the \verb|Oxford_Thesis.tex| file to see the various options for one- and two-sided printing, including or excluding the separate abstract page, and turning corrections and draft footer on or off, and the separate option to centre your text on the page (for PDF submission) or offset it (for binding).  There is also a separate option for master's degree submissions, which changes identifying information to candidate number and includes a word count.  (Unfortunately, \LaTeX has a hard time doing word counts automatically, so you'll have to enter the count manually if you require this.)
-
-\section{Cardiac Imaging}\label{app:imaging}
-
-Within months of Röntgen's discovery of the X-ray in \mccorrect{1895}\cite{gagliardi_rontgen_1996}, cardiac pathology was being investigated via non-invasive imaging \cite{gagliardi_cardiac_1996}.  Over the intervening years, cardiac imaging modalities and techniques have advanced significantly.  Clinically, cardiac imaging is used for two broad purposes: diagnosis of pathophysiology and guidance of interventional procedures.  These applications impose different requirements on imaging equipment, image acquisition time, computational complexity, spatial and temporal resolution, and tissue discrimination.  The common diagnostic and interventional cardiac imaging techniques in current clinical practice are reviewed below.  An accessible introduction to the physics of medical imaging can be found in Webb's \textit{Introduction to Biomedical Imaging} \cite{webb_introduction_2002}.  A comprehensive overview of the use of imaging in clinical cardiology is presented in Leeson's \textit{Cardiovascular Imaging} \cite{leeson_cardiovascular_2011}.
-
-\subsection{Diagnostic Imaging}
-\label{sub:diagnostic}
-
-Beyond the chest X-ray (`plain film'), the key non-invasive imaging modalities in diagnostic cardiology are echocardiography, magnetic resonance imaging, and X-ray computed tomography, which are reviewed below.  Nuclear medicine, including positron emission tomography (PET) and single-photon emission computed tomography (SPECT), are not discussed here, as they do not play a role in the chapters to follow.
-
-\subsubsection{Echocardiography}
-
-\begin{figure}
-\centering\includegraphics[width=0.7\textwidth]{figures/sample/Gray498.png} 
-\caption[Four-chamber illustration of the human heart.]{Four-chamber illustration of the human heart.  Clockwise from upper-left: right atrium, left atrium, left ventricle, right ventricle.}
-\label{fig:fourchamber}\end{figure}
-
-The use of acoustic waves for medical diagnosis, inspired by naval sonar, was initially developed in the 1940s \cite{gagliardi_ultrasonography_1996}.  By 1954, the first clinically useful cardiac ultrasound -- examining motion of the mitral valve in stenosis -- was reported \cite{edler_ultrasonic_1957}.  These early scans were one-dimensional images (`A-mode'), sometimes repeated to generate a time axis (`M-mode').   The sector-scanning probe was developed in the 1970s \cite{bom_ultrasonic_1971,griffith_sector_1974}, leading to the `B-mode' that a modern cardiologist would recognise as an echocardiogram.
+\begin{figure}[h]
+     \centering
+     
+     \begin{subfigure}[b]{0.35\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/mx2_sq_1.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hspace{1cm}
+     \begin{subfigure}[b]{0.35\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/mx2_sq_2.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hfill
+     
+     \begin{subfigure}[b]{0.35\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/mx2_sq_3.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hspace{1cm}
+      \begin{subfigure}[b]{0.35\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/mx2_sq_4.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hfill
+     
+      \begin{subfigure}[b]{0.35\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/mx2_circle.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     \hspace{1cm}
+      \begin{subfigure}[b]{0.35\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/bilayers/mx2_heart.pdf}
+         \caption{}
+         \label{}
+     \end{subfigure}
+     
+     \caption{xxx}
+     \label{fig:xxx}
+\end{figure}
