Add to introduction

--- a/references.bib
+++ b/references.bib
@@ -56,6 +56,19 @@ url = {http://dx.doi.org/10.1016/j.cell.2010.12.035},
 volume = {144},
 year = {2011}
 }
+@article{Roy2018,
+abstract = {The recent experimental discovery of a semi two-dimensional silica glass has offered a realistic description of the random network theory of a silica glass structure, initially discussed by Zachariasen. To study the structure formation of silica in two dimensions, we introduce a two-body force field, based on a soft core Yukawa potential. The different configurations, sampled via Molecular dynamics simulations, can be directly compared with the experimental structures, which have been provided in the literature. The parameters of the force field are obtained from comparison of the nearest-neighbor distances between experiment and simulation. Further key properties such as angle distributions, distribution of ring sizes and triplets of rings are analyzed and compared with the experiment. Of particular interest is the spatial correlation of ring sizes. In general, we observe a very good agreement between experiment and simulation. Additional insight from the simulations is provided about the temporal and spatial stability of the rings in dependence of their size.},
+author = {Roy, Projesh Kumar and Heyde, Markus and Heuer, Andreas},
+doi = {10.1039/c8cp01313f},
+file = {:Users/David/Documents/Work/DPhil/Papers/c8cp01313f.pdf:pdf},
+issn = {14639076},
+journal = {Phys. Chem. Chem. Phys.},
+pages = {14725--14739},
+publisher = {Royal Society of Chemistry},
+title = {{Modelling the atomic arrangement of amorphous 2D silica: a network analysis}},
+volume = {20},
+year = {2018}
+}
 @article{Robertson2012,
 abstract = {Defects in graphene alter its electrical, chemical, magnetic and mechanical properties. The intentional creation of defects in graphene offers a means for engineering its properties. Techniques such as ion irradiation intentionally induce atomic defects in graphene, for example, divacancies, but these defects are randomly scattered over large distances. Control of defect formation with nanoscale precision remains a significant challenge. Here we show control over both the location and average complexity of defect formation in graphene by tailoring its exposure to a focussed electron beam. Divacancies and larger disordered structures are produced within a 10 × 10 nm(2) region of graphene and imaged after creation using an aberration-corrected transmission electron microscope. Some of the created defects were stable, whereas others relaxed to simpler structures through bond rotations and surface adatom incorporation. These results are important for the utilization of atomic defects in graphene-based research.},
 author = {Robertson, Alex W. and Allen, Christopher S and Wu, Yimin A. and He, Kuang and Olivier, Jaco and Neethling, Jan and Kirkland, Angus I. and Warner, Jamie H.},
@@ -120,6 +133,20 @@ title = {{Soap, cells and statistics-random patterns in two dimensions}},
 volume = {50},
 year = {2009}
 }
+@article{Roy2019,
+author = {Roy, Projesh Kumar and Heuer, Andreas},
+doi = {10.1103/PhysRevLett.122.016104},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevLett.122.016104.pdf:pdf},
+issn = {1079-7114},
+journal = {Phys. Rev. Lett.},
+keywords = {doi:10.1103/PhysRevLett.122.016104 url:https://doi},
+pages = {016104},
+publisher = {American Physical Society},
+title = {{Ring Statistics in 2D Silica: Effective Temperatures in Equilibrium}},
+url = {https://doi.org/10.1103/PhysRevLett.122.016104},
+volume = {122},
+year = {2019}
+}
 @article{Lemaitre1993,
 author = {Lemaitre, J and Gervois, A and Troadec, J P and Rivier, N and Ammi, M and Oger, L and Bideau, D},
 doi = {10.1080/13642819308220137},
@@ -146,6 +173,20 @@ title = {{A journey from order to disorder - atom by atom transformation from gr
 url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3920217{\&}tool=pmcentrez{\&}rendertype=abstract},
 volume = {4},
 year = {2014}
+}
+@article{Bjorkman2013,
+abstract = {By combining first-principles and classical force field calculations with aberration-corrected high-resolution transmission electron microscopy experiments, we study the morphology and energetics of point and extended defects in hexagonal bilayer silica and make comparison to graphene, another two-dimensional (2D) system with hexagonal symmetry. We show that the motifs of isolated point defects in these 2D structures with otherwise very different properties are similar, and include Stone-Wales-type defects formed by structural unit rotations, flower defects and reconstructed double vacancies. The morphology and energetics of extended defects, such as grain boundaries have much in common as well. As both sp(2)-hybridised carbon and bilayer silica can also form amorphous structures, our results indicate that the morphology of imperfect 2D honeycomb lattices is largely governed by the underlying symmetry of the lattice.},
+author = {Bj{\"{o}}rkman, Torbj{\"{o}}rn and Kurasch, Simon and Lehtinen, Ossi and Kotakoski, Jani and Yazyev, Oleg V. and Srivastava, Anchal and Skakalova, Viera and Smet, Jurgen H. and Kaiser, Ute and Krasheninnikov, Arkady V.},
+doi = {10.1038/srep03482},
+file = {:Users/David/Documents/Work/DPhil/Papers/srep03482.pdf:pdf},
+isbn = {2045-2322},
+issn = {20452322},
+journal = {Sci. Rep.},
+pages = {3482},
+pmid = {24336488},
+title = {{Defects in bilayer silica and graphene: Common trends in diverse hexagonal two-dimensional systems}},
+volume = {3},
+year = {2013}
 }
 @article{Shackelford1981,
 author = {Shackelford, J. and Brown, B. D.},
@@ -177,6 +218,32 @@ title = {{Comparison of Dislocation Densities of Primary and Secondary Recrystal
 volume = {5},
 year = {1957}
 }
+@article{Barabasi2012,
+author = {Barab{\'{a}}si, Albert-L{\'{a}}szl{\'{o}}},
+doi = {10.1038/nphys2188},
+file = {:Users/David/Documents/Work/DPhil/Papers/nphys2188.pdf:pdf},
+issn = {1745-2473},
+journal = {Nat. Phys.},
+pages = {14--16},
+publisher = {Nature Publishing Group},
+title = {{The network takeover}},
+volume = {8},
+year = {2012}
+}
+@article{Bamer2019,
+author = {Bamer, Franz and Ebrahem, Firaz and Markert, Bernd},
+doi = {10.1016/j.commatsci.2019.03.050},
+file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-S0927025619301855-main-2.pdf:pdf},
+issn = {0927-0256},
+journal = {Comput. Mater. Sci.},
+keywords = {Athermal quasistatic deformation,Brittle fracture,Ductile fracture,Stone-Wales defect,Two-dimensional silica,athermal quasistatic deformation,two-dimensional silica},
+pages = {301--307},
+publisher = {Elsevier},
+title = {{Athermal mechanical analysis of Stone-Wales defects in two-dimensional silica}},
+url = {https://doi.org/10.1016/j.commatsci.2019.03.050},
+volume = {163},
+year = {2019}
+}
 @article{Aboav1970,
 author = {Aboav, D A},
 file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-0026080070900388-main.pdf:pdf},
@@ -196,6 +263,16 @@ publisher = {IOP Publishing},
 title = {{Controlling disorder in two-dimensional networks}},
 volume = {30},
 year = {2018}
+}
+@article{Richter2019,
+author = {Richter, Nina F. and Feiten, Felix E. and Pal, Jagriti and Plucienik, Agata and Emmez, Emre and Shaikhutdinov, Shamil and Kuhlenbeck, Helmut and Risse, Thomas and Freund, Hans-Joachim and Goikoetxea, Itziar and W{\l}odarczyk, Rados{\l}aw and Sauer, Joachim},
+doi = {10.1021/acs.jpcc.8b10478},
+file = {:Users/David/Documents/Work/DPhil/Papers/acs.jpcc.8b10478.pdf:pdf},
+journal = {J. Phys. Chem. C},
+pages = {7110--7117},
+title = {{Characterization of Phonon Vibrations of Silica Bilayer Films}},
+volume = {123},
+year = {2019}
 }
 @article{Malashevich2016,
 abstract = {Density functional theory was used to assess the viability of approaches to controlling the structure of a recently discovered two-dimensional form of SiO2. In accord with prior work, a hexagonal bilayer of mirror image planes of corner-sharing SiO4 tetrahedra in six-membered rings yielded only a slightly higher energy than $\alpha$-quartz. Structures including four- through eight-membered rings were evaluated and in certain cases found to be as little as 17 meV/Si higher in energy than the hexagonal bilayer. When either biaxial or uniaxial tensile strain was applied, combinations of eight-, six-, and four-membered rings became favored due to the lower density of structures with larger rings. These findings, together with experiments that reveal expansion of silica bilayers to match the lattice of metal substrates, suggest that epitaxial strain may be used to control the bilayer structure. Replacement of Si with Ge and Al as prototypical tetravalent and trivalent dopants was also investigated. Substituting Ge for Si was energetically unfavorable and offered no obvious advantage for structural control over pure SiO2 bilayers. In contrast, Al substitution was energetically favorable and only minimally distorted the bilayer. It was found that while the hexagonal bilayer remained favored, the extra-framework electron donors K and H that accompany each Al preferred to occupy larger rings when possible, thus forcing Al to reside in large rings as well. This suggests that the bilayer structure may be controlled through substitution of Si for trivalent dopants and selection of extra-framework electron donors that favor larger rings.},
@@ -223,6 +300,15 @@ title = {{The emergence of geometric order in proliferating metazoan epithelia}}
 volume = {442},
 year = {2006}
 }
+@article{Strogatz2001,
+author = {Strogatz, Steven H},
+file = {:Users/David/Documents/Work/DPhil/Papers/35065725-2.pdf:pdf},
+journal = {Nature},
+pages = {268},
+title = {{Exploring complex networks}},
+volume = {410},
+year = {2001}
+}
 @article{Weaire1974,
 abstract = {Aboav's observation of a correlation between the number of sides of a grain in a section of polycrystal and the number of sides of neighboring grains may be simply explained using Euler's Theorem. It is unreasonable to infer from this correlation that the grains are not disposed at random. ?? 1974.},
 author = {Weaire, D.},
@@ -234,6 +320,17 @@ pages = {157--160},
 title = {{Some remarks on the arrangement of grains in a polycrystal}},
 volume = {7},
 year = {1974}
+}
+@article{Roy2019a,
+author = {Roy, Projesh Kumar and Heuer, Andreas},
+file = {:Users/David/Documents/Work/DPhil/Papers/Roy{\_}2019{\_}J.{\_}Phys.{\%}3A{\_}Condens.{\_}Matter{\_}31{\_}225703-3.pdf:pdf},
+journal = {J. Phys. Condens. Matter},
+keywords = {2d materials,maximum entropy method,md simulations,ring statistics},
+pages = {225703},
+publisher = {IOP Publishing},
+title = {{Relating local structures, energies, and occurrence probabilities in a two-dimensional silica network}},
+volume = {31},
+year = {2019}
 }
 @article{Stone1986,
 author = {Stone, A J and Wales, D J},
@@ -256,6 +353,21 @@ title = {{The Atomic Arrangement in Glass}},
 volume = {54},
 year = {1932}
 }
+@article{Kumar2014,
+abstract = {The recent synthesis and characterisation of bilayers of vitreous silica has produced valuable new information on ring sizes and distributions. In this paper, we compare the ring statistics of experimental samples with computer generated samples. The average ring size is fixed at six by topology, but the width, skewness and other moments of the distribution of ring edges are characteristics of particular samples. We examine the Aboav-Weaire law that quantifies the propensity of smaller rings to be adjacent to larger rings, and find similar results for available experimental samples which however differ somewhat from computer-generated bilayers. We introduce a new law for the areas of rings of various sizes.},
+author = {Kumar, Avishek and Sherrington, David and Wilson, Mark and Thorpe, M F},
+doi = {10.1088/0953-8984/26/39/395401},
+file = {:Users/David/Documents/Work/DPhil/Papers/278.pdf:pdf},
+issn = {0953-8984},
+journal = {J. Phys. Condens. Matter},
+keywords = {bilayers,in colour only in,modelling,ring statistics,silica,some figures may appear,the online journal},
+pages = {395401},
+pmid = {25191795},
+title = {{Ring statistics of silica bilayers}},
+url = {http://stacks.iop.org/0953-8984/26/i=39/a=395401?key=crossref.63df672d4bce26bb39f9f6e7bb5ea246},
+volume = {26},
+year = {2014}
+}
 @article{Carter2017,
 abstract = {D'Arcy Thompson emphasised the importance of surface tension as a potential driving force in establishing cell shape and topology within tissues. Leaf epidermal pavement cells grow into jigsaw-piece shapes, highly deviating from such classical forms. We investigate the topology of developingArabidopsisleaves composed solely of pavement cells. Image analysis of around 50,000 cells reveals a clear and unique topological signature, deviating from previously studied epidermal tissues. This topological distribution is established early during leaf development, already before the typical pavement cell shapes emerge, with topological homeostasis maintained throughout growth and unaltered between division and maturation zones. Simulating graph models, we identify a heuristic cellular division rule that reproduces the observed topology. Our parsimonious model predicts how and when cells effectively place their division plane with respect to their neighbours. We verify the predicted dynamics throughin vivotracking of 800 mitotic events, and conclude that the distinct topology is not a direct consequence of the jigsaw piece-like shape of the cells, but rather owes itself to a strongly life history-driven process, with limited impact from cell-surface mechanics.},
 author = {Carter, Ross and S{\'{a}}nchez-Corrales, Yara E. and Hartley, Matthew and Grieneisen, Ver{\^{o}}nica A. and Mar{\'{e}}e, Athanasius F. M.},
@@ -271,6 +383,16 @@ title = {{Pavement cells and the topology puzzle}},
 url = {http://dev.biologists.org/lookup/doi/10.1242/dev.157073},
 volume = {144},
 year = {2017}
+}
+@article{Boccaletti2006,
+author = {Boccaletti, S and Latora, V and Moreno, Y and Chavez, M and Hwang, D-U},
+doi = {10.1016/j.physrep.2005.10.009},
+file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-S037015730500462X-main.pdf:pdf},
+journal = {Phys. Rep.},
+pages = {175--308},
+title = {{Complex networks : Structure and dynamics}},
+volume = {424},
+year = {2006}
 }
 @article{Trogadas2014,
 author = {Trogadas, Panagiotis and Fuller, Thomas F and Strasser, Peter},
@@ -305,6 +427,20 @@ pages = {3839--3846},
 title = {{Geometry and Topology of Two-Dimensional Dry Foams : Computer Simulation and Experimental Characterization}},
 volume = {33},
 year = {2017}
+}
+@article{Zhang2018a,
+author = {Zhang, Jin},
+doi = {10.1016/j.commatsci.2017.10.005},
+file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-S0927025617305414-main.pdf:pdf},
+issn = {0927-0256},
+journal = {Comput. Mater. Sci.},
+keywords = {two-dimensional silicon dioxide},
+pages = {7--13},
+publisher = {Elsevier B.V.},
+title = {{Phase-dependent mechanical properties of two-dimensional silica films: A molecular dynamics study}},
+url = {https://doi.org/10.1016/j.commatsci.2017.10.005},
+volume = {142},
+year = {2018}
 }
 @article{Kotakoski2011,
 abstract = {While crystalline two-dimensional materials have become an experimental reality during the past few years, an amorphous 2-D material has not been reported before. Here, using electron irradiation we create an sp2-hybridized one-atom-thick flat carbon membrane with a random arrangement of polygons, including four-membered carbon rings. We show how the transformation occurs step-by-step by nucleation and growth of low-energy multi-vacancy structures constructed of rotated hexagons and other polygons. Our observations, along with first-principles calculations, provide new insights to the bonding behavior of carbon and dynamics of defects in graphene. The created domains possess a band gap, which may open new possibilities for engineering graphene-based electronic devices.},
@@ -374,6 +510,17 @@ url = {http://jp1.journaldephysique.org/10.1051/jp1:1993215},
 volume = {3},
 year = {1993}
 }
+@article{Wilson2018,
+author = {Wilson, Mark and Jenkins, Harry},
+file = {:Users/David/Documents/Work/DPhil/Papers/Wilson{\_}2018{\_}J.{\_}Phys.{\%}3A{\_}Condens.{\_}Matter{\_}30{\_}475401.pdf:pdf},
+journal = {J. Phys. Condens. Matter},
+keywords = {amorphous structure,bilayers,in colour only in,network glasses,some figures may appear,the online journal,thin films},
+pages = {475401},
+publisher = {IOP Publishing},
+title = {{Crystalline thin films of silica : modelling , structure and energetics}},
+volume = {30},
+year = {2018}
+}
 @article{Brutin2011,
 author = {Brutin, D and Sobac, B and Loquet, B and Sampol, J},
 doi = {10.1017/S0022112010005070},
@@ -422,6 +569,18 @@ title = {{Direct Imaging of the a Two-Dimensional Silica Glass on Graphene}},
 volume = {12},
 year = {2012}
 }
+@article{Wilson2013,
+abstract = {We computer model a free-standing vitreous silica bilayer which has recently been synthesized and characterized experimentally in landmark work. Here we model the bilayer using a computer assembly procedure that starts from a single layer of amorphous graphene, generated using a bond switching algorithm from an initially crystalline graphene structure. Next each bond is decorated with an oxygen atom and the carbon atoms are relabeled as silicon. This monolayer can be now thought of as a two dimensional network of corner sharing triangles. Next each triangle is made into a tetrahedron, by raising the silicon atom above each triangle and adding an additional singly coordinated oxygen atom at the apex. The final step is to mirror reflect this layer to form a second layer and then attach the two layers together to form the bilayer. We show that this vitreous silica bilayer has the additional macroscopic degrees of freedom to easily form a network of identical corner sharing tetrahedra if there is a symmetry plane through the center of the bilayer going through the layer of oxygen ions that join the upper and lower layers. This has the consequence that the upper rings lie exactly above the lower rings, which are tilted in general. The assumption of a network of perfect corner sharing tetrahedra leads to a range of possible densities that we have previously characterized in three dimensional zeolites as a flexibility window. Finally, using a realistic potential, we have relaxed the bilayer to determine the density, and other structural characteristics such as the Si-Si pair distribution functions and the Si-O-Si bond angle distribution, which are compared to the experimental results obtained by direct imaging.},
+author = {Wilson, Mark and Kumar, Avishek and Sherrington, David and Thorpe, M. F.},
+doi = {10.1103/PhysRevB.87.214108},
+file = {:Users/David/Documents/Work/DPhil/Papers/e214108.pdf:pdf},
+issn = {10980121},
+journal = {Phys. Rev. B},
+pages = {214108},
+title = {{Modeling vitreous silica bilayers}},
+volume = {87},
+year = {2013}
+}
 @article{Milinkovitch2019,
 author = {Milinkovitch, Michel C and Manukyan, Liana and Debry, Adrien and Di-po{\"{i}}, Nicolas and Singh, Daljit and Lambert, Dominique and Zwicker, Matthias and Milinkovitch, Michel C and Manukyan, Liana and Debry, Adrien and Di-pol, Nicolas and Singh, Daljit and Lambert, Dominique and Zwicker, Matthias},
 file = {:Users/David/Documents/Work/DPhil/Papers/23333621.pdf:pdf},
@@ -453,6 +612,29 @@ pages = {245--324},
 title = {{Annealing of cold worked metals}},
 volume = {3},
 year = {1954}
+}
+@article{Overy2016,
+author = {Overy, Alistair R and Cairns, Andrew B and Cliffe, Matthew J and Simonov, Arkadiy and Tucker, Matthew G and Goodwin, Andrew L},
+doi = {10.1038/ncomms10445},
+file = {:Users/David/Documents/Work/DPhil/Papers/ncomms10445.pdf:pdf},
+journal = {Nat. Commun.},
+pages = {10445},
+publisher = {Nature Publishing Group},
+title = {{Design of crystal-like aperiodic solids with selective disorder–phonon coupling}},
+volume = {7},
+year = {2016}
+}
+@article{Thorneywork2017,
+author = {Thorneywork, Alice L and Abbott, Joshua L and Aarts, Dirk G A L and Dullens, Roel P A},
+doi = {10.1103/PhysRevLett.118.158001},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevLett.118.158001.pdf:pdf},
+journal = {Phys. Rev. Lett.},
+pages = {158001},
+publisher = {American Physical Society},
+title = {{Two-Dimensional Melting of Colloidal Hard Spheres}},
+url = {https://link.aps.org/doi/10.1103/PhysRevLett.118.158001},
+volume = {118},
+year = {2017}
 }
 @article{Aboav1980,
 abstract = {A tessellation of Dirichlet polygons is generated from a pattern of points distributed at random over a rectangular grid, and a simple method is devised to disturb the clumps that are a characteristic feature of such a pattern, by subjecting the pattern to a clustering process. The process consists in applying a regular, periodic variation to the line-spacing of the grid. If the period of the variation is sufficiently small, or sufficiently large, the clumping is found to be scarcely affected by the clustering; but there is a narrow range of scale within which the two aggregative processes appear to interfere with each other. This interference is accompanied by a sudden and marked change in the topological properties of neighboring polygons of the tessellation, and an attempt is made to describe this change quantitatively in terms of previously established parameters. The importance of finding a physical counterpart of this geometrical effect is stressed. {\textcopyright} 1985.},
