--- a/thesis.tex
+++ b/thesis.tex
@@ -176,6 +176,11 @@
 % This is where the whole-document ToC appears:
 \tableofcontents
 
+% DOM
+\clearpage
+\listofdavidnote
+\listofmarknote
+
 %\listoffigures
 %	\mtcaddchapter
 % \mtcaddchapter is needed when adding a non-chapter (but chapter-like) entity to avoid confusing minitoc
@@ -200,7 +205,7 @@
 \flushbottom
 %\include{text/chapter_template}
 \include{text/introduction}
-\include{text/bilayers}
+%\include{text/bilayers}
 
 
 
